Arrumado o envio de emails com o mailgun

--- a/emails/template/welcome.hbs
+++ b/emails/template/welcome.hbs
@@ -1,10 +1,21 @@
-"<h2> Hello {{ name }} </h2>"
-"<p>Welcome to the iRent, your rental search application!</p>"
-"<p>your data:</p>
-"<ul>
-  <li>name: {{name}}</li>
-  <li>username: {{username}}</li>
-  <li>email: {{email}}</li>
-  <li>password: {{password}}</li>
-  <li>sex: {{sex}}</li>
-</ul>"
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h2> Hello {{ name }} </h2>
+  <p>Welcome to the iRent, your rental search application!</p>
+  <p>your data:</p>
+  <ul>
+    <li>name: {{name}}</li>
+    <li>username: {{username}}</li>
+    <li>email: {{email}}</li>
+    <li>password: {{password}}</li>
+    <li>sex: {{sex}}</li>
+  </ul>
+</body>
+
+</html>
